margini nelle icone

--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,8 @@ footer {
   background-color: black;
   flex-basis: calc(100% - 87%);
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: flex-start;
   gap: 1rem;
 }
@@ -74,8 +74,17 @@ footer {
   align-items: center;
   gap: 10px;
   margin-left: 10px;
+  margin-bottom: 10px;
 }
 
 .icon-nav h5 {
   color: grey;
+}
+h4 {
+  color: white;
+}
+
+.playlist {
+  margin-left: 10px;
+  margin-top: 1rem;
 }
