--- a/css/style.css
+++ b/css/style.css
@@ -80,11 +80,22 @@ footer {
 .icon-nav h5 {
   color: grey;
 }
+
 h4 {
   color: white;
+  margin-bottom: 1rem;
 }
 
 .playlist {
   margin-left: 10px;
   margin-top: 1rem;
+}
+
+.playlist ul li {
+  color: grey;
+  margin-top: 1rem;
+}
+
+.playlist ul li:first-child {
+  font-size: 1.5rem;
 }
