inizio suddivisione sezione footer

--- a/css/style.css
+++ b/css/style.css
@@ -177,3 +177,24 @@ footer {
   font-size: 18px;
   color: grey;
 }
+
+/* MUSIC-PLAYER */
+.music-player {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1px;
+}
+
+.player-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.progress-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
