--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,16 @@ footer {
   color: grey;
 }
 
+.fa-solid {
+  color: white;
+  font-size: 15px;
+}
+
+.fa-circle-play {
+  color: white;
+  font-size: 30px;
+}
+
 /* MUSIC-PLAYER */
 .music-player {
   display: flex;
@@ -191,10 +201,17 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 15px;
 }
 
 .progress-bar {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 1px;
+}
+
+/* music-setting */
+.music-setting {
+  padding-right: 20px;
 }
