--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,11 @@ footer {
   font-size: 30px;
 }
 
+.music-setting .fa-solid {
+  color: white;
+  font-size: 12px;
+}
+
 /* MUSIC-PLAYER */
 .music-player {
   display: flex;
@@ -232,5 +237,14 @@ footer {
 
 /* music-setting */
 .music-setting {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
   padding-right: 20px;
+}
+
+.music-setting .time-container {
+  width: 100px;
+  height: 4px;
 }
