--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ ul {
 .side-bar {
   /* DEBUG */
   background-color: black;
-  flex-basis: 200px;
+  flex-basis: 180px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -138,7 +138,7 @@ h4 {
 
 /* footer */
 footer {
-  height: 100px;
+  height: 80px;
   flex-grow: 0;
   flex-shrink: 0;
   /* DEBUG */
@@ -166,6 +166,11 @@ footer {
 
 .music-info .info h6 {
   color: grey;
+  cursor: pointer;
+}
+
+.music-info .info h6:hover {
+  color: white;
 }
 
 /* icone */
@@ -251,6 +256,7 @@ footer {
   width: 20%;
   background: #fff;
   border-radius: 3px;
+  position: relative;
 }
 
 /* music-setting */
@@ -273,4 +279,15 @@ footer {
 
 .time-container:hover .time-bar {
   background-color: greenyellow;
+}
+
+.time-container:hover .time-bar::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: -3px;
+  width: 12px;
+  height: 12px;
+  background-color: white;
+  border-radius: 50%;
 }
