--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,11 @@ ul {
 
 .icon-nav h5 {
   color: grey;
+  cursor: pointer;
+}
+
+.icon-nav h5:hover {
+  color: #fff;
 }
 
 h4 {
@@ -90,6 +95,11 @@ h4 {
 .playlist ul li {
   color: grey;
   margin-top: 1rem;
+  cursor: pointer;
+}
+
+.playlist ul li:hover {
+  color: #fff;
 }
 
 .playlist ul li:first-child {
@@ -105,6 +115,7 @@ h4 {
   display: flex;
   align-items: center;
   gap: 10px;
+  cursor: pointer;
 }
 
 .download img {
@@ -113,6 +124,10 @@ h4 {
 
 .download h5 {
   color: grey;
+}
+
+.download h5:hover {
+  color: #fff;
 }
 
 .line {
