--- a/css/style.css
+++ b/css/style.css
@@ -194,11 +194,11 @@ footer {
   width: 10%;
 }
 
-.music-info .info h5 {
+.info h5 {
   color: white;
 }
 
-.music-info .info h6 {
+.info h6 {
   color: grey;
   cursor: pointer;
 }
@@ -354,4 +354,23 @@ footer {
 .recently-played h2 {
   color: white;
   padding-left: 20px;
+}
+
+.img-wrapper img {
+  width: 100%;
+}
+
+.cards-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 30px 0;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.card {
+  width: calc(100% / 6 - (100px / 6));
+  position: relative;
+  cursor: pointer;
 }
