--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 main {
@@ -155,7 +156,7 @@ li.icon-nav:hover {
   display: flex;
   align-items: center;
   gap: 10px;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .user-area img {
@@ -427,3 +428,4 @@ h4 {
 .img-wrapper:hover .centro {
   opacity: 1;
 }
+/* controllare margine sotto footer */
