--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,19 +4,23 @@
     width: calc(100% / 4 - (60px / 4));
   }
 
-  .nav-bar ul {
+  /* .nav-bar ul {
     flex-wrap: wrap;
-    gap: 10px;
+    padding-left: 20px;
+    gap: 0px;
   }
 
   .nav-bar ul li {
-    width: calc(100% / 5 - (40px / 5));
-    padding-bottom: 10px;
-  }
+    width: calc(100% / 5);
+    padding-bottom: 20px;
+  } */
 }
 
 /* Small: da 767px in giù */
 @media screen and (max-width: 767px) {
+  .card {
+    width: calc(100% / 2 - (20px / 2));
+  }
 }
 
 /* Extra small: da 575px in giù */
