--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,16 +4,15 @@
     width: calc(100% / 4 - (60px / 4));
   }
 
-  /* .nav-bar ul {
+  .nav-bar ul {
     flex-wrap: wrap;
-    padding-left: 20px;
-    gap: 0px;
+    gap: 10px;
   }
 
   .nav-bar ul li {
-    width: calc(100% / 5);
+    width: calc(100% / 5 - (40px / 5));
     padding-bottom: 20px;
-  } */
+  }
 }
 
 /* Small: da 767px in giù */
@@ -21,8 +20,23 @@
   .card {
     width: calc(100% / 2 - (20px / 2));
   }
+
+  .nav-bar ul li {
+    width: calc(100% / 3 - (20px / 3));
+    padding-bottom: 20px;
+  }
 }
 
 /* Extra small: da 575px in giù */
 @media screen and (max-width: 575px) {
+  .nav-bar ul li {
+    width: calc(100% / 3 - (20px / 3));
+    padding-bottom: 20px;
+  }
+
+  .nav-bar ul li {
+    width: calc(100% / 4 - (30px / 4));
+    padding-bottom: 20px;
+    font-size: 9px;
+  }
 }
