--- a/css/style.css
+++ b/css/style.css
@@ -356,9 +356,7 @@ footer .fa-circle-play:hover {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  margin: 30px 0;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 20px;
 }
 
 .card {
@@ -402,14 +400,14 @@ h4 {
 
 /* POPULAR ARTIST  */
 .popular-artist .img-wrapper img {
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
 }
 
-.popular-artist .card {
+/* .popular-artist .card {
   margin-right: 20px;
-}
+} */
 
 /* heart section */
 .img-wrapper {
