--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,6 +12,7 @@
 
   .nav-bar ul li {
     padding-bottom: 20px;
+    width: calc(100% / 5 - (80px / 5));
   }
 
   .time-container {
@@ -26,6 +27,7 @@
   }
 
   .nav-bar ul li {
+    width: calc(100% / 3 - (40px / 3));
   }
 
   .time-container {
@@ -47,7 +49,11 @@
 
 /* Extra small: da 575px in giù */
 @media screen and (max-width: 575px) {
+  .nav-bar ul {
+    gap: 10px;
+  }
   .nav-bar ul li {
+    width: calc(100% / 4 - (30px / 4));
   }
 
   .music-info .info {
