--- a/css/responsive.css
+++ b/css/responsive.css
@@ -100,4 +100,13 @@
   .side-bar {
     flex-basis: 50px;
   }
+
+  li.icon-nav img {
+    width: 100%;
+  }
+
+  li.icon-nav {
+    padding-right: 10px;
+    padding-left: 0px;
+  }
 }
