--- a/css/style.css
+++ b/css/style.css
@@ -85,13 +85,14 @@ ul {
 }
 
 .logo-small {
-  padding: 8px;
   margin-bottom: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
   display: none;
 }
 
 .logo-small img {
-  width: 20%;
+  width: 100%;
 }
 
 li.icon-nav img {
