--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,19 +82,12 @@
     display: none;
   }
 
-  .side-bar .download {
-  }
-
-  .side-bar .user-area img {
-  }
-
   .logo-small {
     display: block;
   }
 
   .lower-bar {
     gap: 10px;
-    padding-left: 5px;
   }
 
   .side-bar {
@@ -108,5 +101,21 @@
   li.icon-nav {
     padding-right: 10px;
     padding-left: 0px;
+  }
+
+  .download {
+    padding-right: 10px;
+  }
+
+  .download img {
+    width: 100%;
+  }
+
+  .user-area {
+    padding-right: 10px;
+  }
+
+  .user-area img {
+    width: 100%;
   }
 }
