--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,6 @@ footer .fa-circle-play:hover {
   justify-content: center;
   align-items: center;
   gap: 15px;
-  height: 30px;
 }
 
 .player-controls i {
@@ -305,6 +304,7 @@ footer .fa-circle-play:hover {
   background: grey;
   border-radius: 3px;
   cursor: pointer;
+  width: 300px;
 }
 
 .time-bar {
